# ollama-discord-bot

./: Cargo.toml  README.md  flake.nix
src/: commands.rs  main.rs  utils.rs
src/commands/: chat.rs  models.rs
