[package]
name = "discord_rust_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.2"
poise = "0.6.1"
ollama-rs = { version = "0.2.1", features = ["stream"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio-stream = "0.1.16"
chrono = "0.4.38"
